--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ coveralls==1.1
 dj-database-url==0.3.0
 dj-static==0.0.6
 Django==1.9.4
+django-crispy-forms==1.6.0
 django-debug-toolbar==1.4
 django-envie==0.0.9
+django-filter==0.13.0
 django-nose==1.4.2
 django-postgrespool==0.3.0
 django-rest-swagger==0.3.4
