--- a/reactlibapp/static/bower.json
+++ b/reactlibapp/static/bower.json
@@ -18,6 +18,7 @@
   ],
   "dependencies": {
     "jquery": "^2.2.2",
-    "semantic": "semantic-ui#^2.1.8"
+    "semantic": "semantic-ui#^2.1.8",
+    "typed.js": "^1.1.1"
   }
 }
