--- a/reactlibapp/static/package.json
+++ b/reactlibapp/static/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/andela-sjames/Django-ReactJS-Library-App#readme",
   "dependencies": {
     "axios": "^0.9.1",
+    "jquery": "^2.2.3",
     "react": "^0.14.7",
     "react-addons-css-transition-group": "^0.14.7",
     "react-dom": "^0.14.7",
