--- a/reactlibapp/static/package.json
+++ b/reactlibapp/static/package.json
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/andela-sjames/Django-ReactJS-Library-App.git"
   },
   "author": "Samuel James",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/andela-sjames/Django-ReactJS-Library-App/issues"
   },
