fix(shell): fix shell script to start app
- implement script for docker and local development
- remove editor-related folder
- include .env_sample for users to copy

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@ reactlibapp/static/dist
 
 # test database
 /reactlibapp/reactlibapp/test.db
+
+/reactlibapp/.env
+
+# ignore editor related files
+.vscode
