--- a/reactlibapp/requirements.txt
+++ b/reactlibapp/requirements.txt
@@ -16,6 +16,7 @@ django-nose==1.4.4
 django-postgrespool==0.3.1
 django-rest-swagger==2.1.2
 django-toolbelt==0.0.1
+django-webpack-loader==0.5.0
 djangorestframework==3.6.3
 docopt==0.6.2
 gunicorn==19.7.1
