chore(react-setup): add shell script for running tests
Write a script accepting arguments allowing it to:
- run client tests
- run server tests
- run both
- submit coverage to a coverage analysis tool (like Coveralls)

--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -9,7 +9,8 @@
     "prebuild": "rm -rf ../static/{css,js,img}",
     "prewatch": "npm run prebuild",
     "test": "jest --config jest.json",
-    "pretest": "rm -rf coverage"
+    "pretest": "rm -rf coverage",
+    "report": "codecov"
   },
   "repository": {
     "type": "git",
