--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,18 @@ jobs:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
       - run:
           command: |
+            curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+            sudo apt-get install -y nodejs
+            which node
+            which npm
+      - run:
+          command: |
             python3 -m venv venv
             . venv/bin/activate
             cd reactlibapp
             pip install -r requirements.txt
+            cd client
+            npm install
       - save_cache:
           key: deps1-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
@@ -30,7 +38,8 @@ jobs:
           command: |
             . venv/bin/activate
             cd reactlibapp
-            coverage run --source libraryapp manage.py test
+            chmod +x run_tests.sh
+            ./run_tests.sh -csr
       - store_artifacts:
           path: test-reports/
           destination: tr1
