update dockerfile and shell scripts

--- a/reactlibapp/Dockerfile
+++ b/reactlibapp/Dockerfile
@@ -1,17 +1,18 @@
 FROM python:3.6.2
 
-
 WORKDIR /reactlibapp
 ADD requirements.txt /reactlibapp/
-RUN apt-get update && \
-    apt-get install -y postgresql python-psycopg2 libpq-dev cython && \
-    pip install --upgrade pip && pip install -r requirements.txt
+RUN pip install -r requirements.txt 
+RUN apt-get update
+RUN apt-get install -y nodejs
+RUN apt-get install -y npm
 
 ADD run_web.sh /reactlibapp/
+ADD start_app.sh /reactlibapp/
 
 # create unprivileged user
 RUN adduser --disabled-password --gecos '' djangoreactapp
 COPY . /reactlibapp/
 
-RUN chmod u+x ./run_web.sh
+RUN chmod +x ./run_web.sh && chmod +x ./start_app.sh
 ENTRYPOINT ["./run_web.sh"]
