chore(react-setup): modularize shell scripts
Move shared launching code to its own file

--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -4,7 +4,7 @@
   "description": "Amity Library App",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production webpack --config webpack.config.prod.js -p",
+    "build": "webpack --config webpack.config.prod.js -p",
     "watch": "webpack-dev-server --config webpack.config.dev.js --progress --colors",
     "prebuild": "rm -rf ../static/{css,js,img}",
     "prewatch": "npm run prebuild",
