--- a/reactlibapp/.dockerignore
+++ b/reactlibapp/.dockerignore
@@ -1,2 +1,9 @@
-./client/node_modules
+./client/node_modules/
+./client/coverage/
 ./client/webpack-stats.json
+./static/js/
+./static/css/
+./static/img/
+Dockerfile
+.coverage
+.env_sample
