update dockerfile to cache node_modules

--- a/reactlibapp/Dockerfile
+++ b/reactlibapp/Dockerfile
@@ -2,13 +2,15 @@ FROM python:3.6.2
 
 WORKDIR /reactlibapp
 ADD requirements.txt /reactlibapp/
-RUN pip3 install -r requirements.txt 
+RUN pip3 install -r requirements.txt
 
 # update and install broken dependencies before proceeding
 RUN apt-get update
 RUN apt-get -f install
+ONBUILD COPY ./client/package.json /reactlibapp/client/
 RUN curl -sL https://deb.nodesource.com/setup_7.x | bash -
 RUN apt-get install -y nodejs
+ONBUILD RUN cd /reactlibapp/client/ && npm install
 
 ADD run_web.sh /reactlibapp/
 
@@ -21,7 +23,7 @@ RUN usermod -aG docker djangoreactapp
 RUN chown -R djangoreactapp:$(id -gn djangoreactapp) ~/
 RUN chown -R djangoreactapp:$(id -gn djangoreactapp) ~/
 
-COPY . /reactlibapp/
+ONBUILD COPY . /reactlibapp/
 RUN chown -R djangoreactapp:$(id -gn djangoreactapp) /reactlibapp/client/
 
 RUN chmod +x ./run_web.sh && chmod +x ./launch.sh
