--- a/reactlibapp/client/tsconfig.json
+++ b/reactlibapp/client/tsconfig.json
@@ -3,6 +3,7 @@
     "outDir": "../static/js",
     "sourceMap": true,
     "noImplicitAny": true,
+    "downlevelIteration": true,
     "module": "commonjs",
     "skipLibCheck": true,
     "target": "es5",
