--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,39 +1,20 @@
 version: '3'
 
-volumes:
-  postgres_data_dev: {}
-  postgres_backup_dev: {}
-
 services:
   postgres:
     restart: always
     image: postgres
     container_name: react_lib_db
-    volumes:
-      - postgres_data_dev:/var/lib/postgresql/data
-      - postgres_backup_dev:/backups
-  
-  node:
-    container_name: react_lib_node
-    build:
-      context: ./reactlibapp
-      dockerfile: Dockerfile.node
-    volumes:
-      - .:/Rapp
-    ports:
-      - "9000:9000"
-  
   web:
     container_name: react_lib_web
-    build:
-      context: ./reactlibapp
-      dockerfile: Dockerfile.web
+    build: ./reactlibapp
     env_file:
       - .env
     volumes:
-      - .:/Rapp
+      - ./reactlibapp:/app
+      - /app/client/node_modules/
     ports: 
       - "8000:8000"
+      - "9000:9000"
     depends_on:
       - postgres
-      - node
