--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -37,6 +37,7 @@
     "axios": "0.16.2",
     "css-loader": "0.28.4",
     "csso-loader": "0.3.1",
+    "es6-promise": "4.1.1",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
     "localforage": "1.5.0",
