feature(landing-page): create Google sign-in button
- implement SVG and Sass for sign-in button
- link button to dummy sign-in action

--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -27,6 +27,7 @@
     "npm": "4.2.0"
   },
   "dependencies": {
+    "@types/extract-text-webpack-plugin": "2.1.0",
     "@types/react": "16.0.1",
     "@types/react-dom": "15.5.2",
     "@types/react-redux": "5.0.0",
