--- a/reactlibapp/client/tsconfig.json
+++ b/reactlibapp/client/tsconfig.json
@@ -7,7 +7,22 @@
     "module": "commonjs",
     "skipLibCheck": true,
     "target": "es5",
-    "jsx": "react"
+    "jsx": "react",
+    "allowSyntheticDefaultImports": true,
+    "declaration": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "forceConsistentCasingInFileNames": true,
+    "importHelpers": true,
+    "noEmitHelpers": true,
+    "lib": [
+      "dom",
+      "es2016",
+      "es2017.object"
+    ],
+    "moduleResolution": "node",
+    "pretty": true,
+    "removeComments": true
   },
   "include": [
     "./src/**/*",
@@ -15,7 +30,7 @@
   ],
   "exclude": [
     "node_modules",
-    "**/*.spec.ts"
+    "__tests__"
   ],
   "types": ["jest", "expect"]
 }
