--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -77,7 +77,7 @@
     "jest": "20.0.4",
     "jsdom": "11.1.0",
     "moxios": "0.4.0",
-    "react-addons-test-utils": "15.6.0",
+    "react-test-renderer": "15.6.1",
     "redux-devtools": "3.4.0",
     "redux-devtools-extension": "2.13.2",
     "redux-immutable-state-invariant": "2.0.0",
