--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -28,6 +28,7 @@
     "npm": "4.2.0"
   },
   "dependencies": {
+    "@types/dotenv": "4.0.1",
     "@types/extract-text-webpack-plugin": "2.1.0",
     "@types/react": "16.0.1",
     "@types/react-dom": "15.5.2",
@@ -39,6 +40,7 @@
     "axios": "0.16.2",
     "css-loader": "0.28.4",
     "csso-loader": "0.3.1",
+    "dotenv": "4.0.0",
     "es6-promise": "4.1.1",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
