--- a/reactlibapp/requirements.txt
+++ b/reactlibapp/requirements.txt
@@ -27,9 +27,11 @@ idna==2.5
 itypes==1.1.0
 Jinja2==2.9.6
 MarkupSafe==1.0
+mock==2.0.0
 nose==1.3.7
 oauth2client==4.1.2
 openapi-codec==1.3.2
+pbr==3.1.1
 psycopg2==2.7.3
 pyasn1==0.3.2
 pyasn1-modules==0.0.11
