--- a/reactlibapp/.env_sample
+++ b/reactlibapp/.env_sample
@@ -3,3 +3,5 @@ DB_PASS=postgres_password
 DB_SERVICE=postgres_host
 DB_PORT=5432
 DB_NAME=postgres_db_name
+SECRET_KEY=<your secret key>
+CLIENT_ID=<your Google project client ID>
