--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -85,6 +85,7 @@
     "redux-immutable-state-invariant": "2.0.0",
     "redux-logger": "3.0.6",
     "redux-mock-store": "1.2.3",
+    "simulant": "0.2.2",
     "sinon": "3.2.0",
     "ts-jest": "20.0.10",
     "ts-node": "3.3.0",
