--- a/reactlibapp/requirements.txt
+++ b/reactlibapp/requirements.txt
@@ -20,6 +20,7 @@ django-webpack-loader==0.5.0
 djangorestframework==3.6.3
 djangorestframework-jwt==1.11.0
 docopt==0.6.2
+flake8==3.4.1
 google-api-python-client==1.6.2
 gunicorn==19.7.1
 httplib2==0.10.3
@@ -27,6 +28,7 @@ idna==2.5
 itypes==1.1.0
 Jinja2==2.9.6
 MarkupSafe==1.0
+mccabe==0.6.1
 mock==2.0.0
 nose==1.3.7
 oauth2client==4.1.2
@@ -35,6 +37,8 @@ pbr==3.1.1
 psycopg2==2.7.3
 pyasn1==0.3.2
 pyasn1-modules==0.0.11
+pycodestyle==2.3.1
+pyflakes==1.5.0
 PyJWT==1.5.2
 pystache==0.5.4
 python-env==1.0.0
