--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -58,6 +58,7 @@
     "redux-persist": "4.3.1",
     "redux-thunk": "2.2.0",
     "sass-loader": "6.0.6",
+    "simulant": "0.2.2",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
     "tslib": "1.7.1",
