--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 # link to documentation https://circleci.com/docs/2.0/language-python/
+# link to deployment doc for heroku: https://circleci.com/docs/2.0/deployment_integrations/#heroku
 version: 2
 jobs:
   build:
@@ -47,3 +48,33 @@ jobs:
       - store_artifacts:
           path: test-reports/
           destination: tr1
+  deploy-heroku:
+    docker:
+      - image: circleci/python:3.6.2
+      - image: circleci/postgres:9.6.2
+    working_directory: ~/Django-ReactJS-Library-App 
+    steps:
+      - run:
+          name: Run setup script
+          command: bash .circleci/setup-heroku.sh
+      - add_ssh_keys:
+          fingerprints:
+            - "8d:e9:3f:a3:79:c5:f4:af:bc:19:6c:3f:43:f5:72:2f"
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push -f heroku master
+            heroku run python reactlibapp/manage.py makemigrations --settings=reactlibapp.settings --app library-app-staging
+            heroku run python reactlibapp/manage.py migrate --settings=reactlibapp.settings --app library-app-staging
+            heroku restart            
+ workflows:
+   version: 2
+   build-deploy:
+     jobs:
+       - build
+       - deploy-heroku:
+           requires:
+             - build
+           filters:
+             branches:
+               only: master
