add DB_HOST to .env.sample

--- a/.env_sample
+++ b/.env_sample
@@ -3,5 +3,6 @@ DB_PASS=postgres_password
 DB_SERVICE=postgres_host
 DB_PORT=5432
 DB_NAME=postgres_db_name
+DB_HOST=db_host_name
 SECRET_KEY=<your secret key>
 CLIENT_ID=<your Google project client ID>
