--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ coverage==4.4.1
 coveralls==1.1
 dj-database-url==0.4.2
 dj-static==0.0.6
-Django==1.11.3
+Django==1.11.4
 django-crispy-forms==1.6.1
 django-debug-toolbar==1.8
 django-envie==0.0.9
@@ -55,3 +55,4 @@ static3==0.7.0
 uritemplate==3.0.0
 urllib3==1.22
 virtualenv==15.1.0
+whitenoise==3.3.0
