--- a/reactlibapp/client/package.json
+++ b/reactlibapp/client/package.json
@@ -24,12 +24,13 @@
   },
   "homepage": "https://github.com/andela-sjames/Django-ReactJS-Library-App#readme",
   "engines": {
-    "node": "7.10.1",
+    "node": ">=7.10.1",
     "npm": "4.2.0"
   },
   "dependencies": {
     "@types/dotenv": "4.0.1",
     "@types/extract-text-webpack-plugin": "2.1.0",
+    "@types/html-webpack-plugin": "^2.30.2",
     "@types/react": "16.0.1",
     "@types/react-dom": "15.5.2",
     "@types/react-redux": "5.0.0",
@@ -44,6 +45,7 @@
     "es6-promise": "4.1.1",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "html-webpack-plugin": "^3.0.4",
     "localforage": "1.5.0",
     "muicss": "0.9.20",
     "node-sass": "4.5.3",
